--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "solana-wallet-app",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -14,6 +13,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "7.1.0",
@@ -52,9 +52,10 @@
     "metro": "^0.81.0",
     "metro-config": "^0.81.0",
     "metro-resolver": "^0.81.0",
+    "process": "^0.11.10",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "^0.76.9",
+    "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.12",
     "react-native-dotenv": "^3.4.11",
@@ -71,6 +72,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "react-native-system-navigation-bar": "^2.6.4",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
