--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dompurify": "^3.2.5",
     "dotenv": "^16.5.0",
     "expo": "~52.0.46",
+    "expo-application": "~6.0.2",
     "expo-auth-session": "~6.0.3",
     "expo-build-properties": "~0.13.3",
     "expo-clipboard": "~7.0.1",
@@ -82,8 +83,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "text-encoding": "^0.7.0",
-    "expo-application": "~6.0.2"
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
