--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.0",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.1.10",
     "@react-navigation/stack": "7.1.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "@supabase/auth-helpers-react": "^0.5.0",
-    "@supabase/supabase-js": "^2.49.8",
+    "@supabase/supabase-js": "^2.49.9",
     "axios": "^1.8.4",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
     "dompurify": "^3.2.5",
     "dotenv": "^16.5.0",
     "expo": "~52.0.46",
@@ -88,7 +89,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "babel-preset-expo": "~12.0.11"
+    "babel-preset-expo": "~12.0.11",
+    "supabase": "^2.23.4"
   },
   "expo": {
     "doctor": {
