--- a/supabase/functions/airdrop-wallet/deno.json
+++ b/supabase/functions/airdrop-wallet/deno.json
@@ -1,8 +1,8 @@
 {
   "imports": {
-    "@solana/spl-token": "npm:@solana/spl-token@0.4",
+    "@solana/spl-token": "npm:@solana/spl-token",
     "@solana/web3.js": "npm:@solana/web3.js@1",
-    "@supabase/supabase-js": "jsr:@supabase/supabase-js@2",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48",
     "@/shared/": "../_shared/"
   }
 }
