--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.0",
+    "@expo/config-plugins": "^10.0.2",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-google-signin/google-signin": "^14.0.1",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/stack": "7.1.0",
@@ -25,7 +26,7 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.49.9",
     "axios": "^1.8.4",
-    "bs58": "^6.0.0",
+    "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.5",
@@ -33,7 +34,7 @@
     "expo": "~52.0.46",
     "expo-application": "~6.0.2",
     "expo-auth-session": "~6.0.3",
-    "expo-build-properties": "~0.13.3",
+    "expo-build-properties": "^0.13.3",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-crypto": "~14.0.2",
@@ -47,9 +48,9 @@
     "expo-local-authentication": "~15.0.2",
     "expo-navigation-bar": "~4.0.9",
     "expo-network": "~7.0.5",
-    "expo-notifications": "~0.29.14",
+    "expo-notifications": "^0.29.14",
     "expo-random": "^14.0.1",
-    "expo-router": "^4.0.20",
+    "expo-router": "^4.0.21",
     "expo-secure-store": "~14.0.1",
     "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.24",
