--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
+    "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "~12.0.11",
     "supabase": "^2.23.4"
