--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo": "~52.0.46",
     "expo-application": "~6.0.2",
     "expo-auth-session": "~6.0.3",
+    "expo-blur": "^14.1.5",
     "expo-build-properties": "^0.13.3",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
