made some improvement

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,7 @@ encryption_public_key.pem
 # dapp.json
 # app.config.js
 # eas.json
+check.js
+checkSmpAta.js
+@david350__sempai-hq.jks
+@physiotelli350__sempai-hq.jks
