--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.0",
-    "@expo/config-plugins": "^10.0.2",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/vector-icons": "~14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "7.1.0",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
@@ -34,7 +34,7 @@
     "expo": "~52.0.46",
     "expo-application": "~6.0.2",
     "expo-auth-session": "~6.0.3",
-    "expo-blur": "^14.1.5",
+    "expo-blur": "~14.0.3",
     "expo-build-properties": "^0.13.3",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
@@ -50,7 +50,6 @@
     "expo-navigation-bar": "~4.0.9",
     "expo-network": "~7.0.5",
     "expo-notifications": "^0.29.14",
-    "expo-random": "^14.0.1",
     "expo-router": "^4.0.21",
     "expo-secure-store": "~14.0.1",
     "expo-speech": "~13.0.1",
@@ -82,7 +81,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
@@ -92,7 +91,6 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "~12.0.11",
     "supabase": "^2.31.8"
