--- a/dapp-store/publishing/config.yaml
+++ b/dapp-store/publishing/config.yaml
@@ -1,18 +1,18 @@
 publisher:
-  name: <<YOUR_PUBLISHER_NAME>>
-  website: <<URL_OF_PUBLISHER_WEBSITE>>
-  email: <<EMAIL_ADDRESS_TO_CONTACT_PUBLISHER>>
+  name: <<Sempai Hq>>
+  website: <<WWW.SEMPAIHQ.XYZ>>
+  email: <<BEAUTIFULSHAMELESS@GMAIL.COM, obinnap350@gmail.com>
 app:
-  name: <<APP_NAME>>
+  name: <<SEMPAI_HQ>>
   address: ''
-  android_package: <<ANDROID_PACKAGE_NAME>>
+  android_package: <<com.turningpointKS.sempaihq>>
   urls:
-    license_url: <<URL_OF_APP_LICENSE_OR_TERMS_OF_SERVICE>>
-    copyright_url: <<URL_OF_COPYRIGHT_DETAILS_FOR_APP>>
-    privacy_policy_url: <<URL_OF_APP_PRIVACY_POLICY>>
-    website: <<URL_OF_APP_WEBSITE>>
+    license_url: <<https://www.sempaihq.xyz/terms>>
+    copyright_url: <<https://www.sempaihq.xyz/terms>>
+    privacy_policy_url: <<https://www.sempaihq.xyz/privacy-policy>>
+    website: <<www.sempaihq.xyz>>
   media:
-    - purpose: icon
+    - purpose: icons
       uri: <<RELATIVE_PATH_TO_APP_ICON>>
 release:
   address: ''
@@ -39,8 +39,34 @@ release:
   catalog:
     en-US:
       name: <<APP_NAME>>
-      short_description: <<SHORT_APP_DESCRIPTION>>
-      long_description: <<LONG_APP_DESCRIPTION>>
+      short_description: <<First Read to Earn decentralized ecosystem in Solana>>
+      long_description: <<A decentralized read to earn platform on Solana in its beta stage. 
+
+We seek to power an ecosystem of creators and consumers/customers in a structured system that will reward the user and the creator in the same blockchain transaction. Powered by the love for anime, manga and webnovels, we're building the mobile version of our cozy part of the internet where love for literature and community is tokenized and turned into a throbbing and incentivized marketplace for stories, art, NFTs and an in-app currency.
+
+## Features
+
+- Read-to-earn platform for manga and novels
+- Creator ecosystem with writer and artist support
+- Weekly rewards system for active users
+- Wallet integration for Solana blockchain
+- In-app SMP token economy
+
+## Weekly Rewards System
+
+The platform includes an automated weekly rewards system that distributes SMP tokens to users based on their activity points. Every Sunday at midnight UTC, 25,000,000 SMP tokens are distributed proportionally to users based on their accumulated weekly points.
+
+### How It Works
+
+1. Users earn weekly points through platform activity
+2. Points are tracked in the `weekly_points` field of the users table
+3. The weekly rewards function runs automatically every Sunday
+4. 25,000,000 SMP tokens are distributed proportionally to users with points
+5. Tokens are added to users' off-chain wallet balances
+6. Weekly points are reset after distribution
+7. Users can withdraw their SMP tokens through the Novels page
+
+>>
       new_in_version: <<WHATS_NEW_IN_THIS_VERSION>>
       saga_features: <<ANY_FEATURES_ONLY_AVAILBLE_WHEN_RUNNING_ON_SAGA>>
 solana_mobile_dapp_publisher_portal:
