--- a/dapp-store/publishing/config.yaml
+++ b/dapp-store/publishing/config.yaml
@@ -15,16 +15,16 @@ app:
     - purpose: icons
       uri: <<RELATIVE_PATH_TO_APP_ICON>>
 release:
-  address: 'Sempaihq.xyz/downloads'
+  address: 'https://www.sempaihq.xyz/downloads'
   media: 
     - purpose: icon
-      uri: <<..\dapp-store\store-assets\Dapp Icon.png>>
+      uri: <<dapp-store\store-assets\Dapp Icon.png>>
     - purpose: banner
-      uri: <<..\dapp-store\store-assets\Banner for Dapp Store.png>>
+      uri: <<dapp-store\store-assets\Banner for Dapp Store.png>>
     - purpose: featureGraphic
-      uri: <<..\dapp-store\store-assets\Feature Graphic.png>>
+      uri: <<dapp-store\store-assets\Feature Graphic.png>>
     - purpose: screenshot
-      uri: <<..\dapp-store\store-assets\Combat Modal.jpg>>
+      uri: <<dapp-store\store-assets\Combat Modal.jpg>>
     - purpose: screenshot
       uri: <<dapp-store\store-assets\Airdrop.jpg>>
     - purpose: screenshot
