--- a/eas.json
+++ b/eas.json
@@ -43,6 +43,8 @@
       }
     },
     "dapp-store": {
+      "distribution": "store",
+      "autoIncrement": true,
       "channel": "production",
       "android": {
         "buildType": "apk",
