Update dapp-store profile to use remote credentials

--- a/eas.json
+++ b/eas.json
@@ -48,7 +48,7 @@
       "channel": "production",
       "android": {
         "buildType": "apk",
-        "credentialsSource": "local"
+        "credentialsSource": "remote"
       },
       "env": {
         "EXPO_PUBLIC_API_URL": "https://www.sempaihq.xyz/api/",
