--- a/dapp-store/publishing/config.yaml
+++ b/dapp-store/publishing/config.yaml
@@ -32,7 +32,7 @@ release:
     - purpose: screenshot
       uri: <<dapp-store/store-assets/Creator_das.JPG>>
     - purpose: video
-      uri: <<RELATIVE_PATH_TO_VIDEO1>>
+      uri: <<dapp-store\store-assets\Sempai Feature Video.mp4>>
   files:
     - purpose: install
       uri: <<dapp-store\store-assets\SempaiHQ.apk>>
